--- a/算法导论读书笔记/算法导论第二章.md
+++ b/算法导论读书笔记/算法导论第二章.md
@@ -169,8 +169,9 @@ $$
 解决：使用归并排序递归的排序两个子序列
 合并：合并两个已排序的子序列以产生已排序的答案
 
-##### 伪代码
+##### 伪代码 
 
+###### 合并子函数
 ~~~
 MERGE(A,p,q,r)
 //A数组，p,q,r为下标，满足p<=q<r,该函数起始A[p,...,q]和A[q+1,r]都已是排好序的子序列。
@@ -182,5 +183,33 @@ for(i = 1 to q-p+1)
 for(i = 1 to r-q)
 	AR[i] = A[i+q]
 
+//两个无穷大的哨兵避免了每次迭代都需要检查子序列是否为空
+AL[q-p+2] = 无穷大
+AR[r-q+1] = 无穷大
+
+i = 0 
+j = 0
+for(k = p to r)
+	if(a[i]<=a[j])
+		A[k] = a[i]
+		i = i+1
+	else
+		A[k] = a[j]
+		j = j+1
+~~~
+
+###### 递归调用
 
 ~~~
+void mergeSort(A,p,r)
+{
+	if(p<r)
+		q = (p+r)/2
+		mergeSort(A,p,q)
+		mergeSort(A,q+1,r)
+		MERGE(A,p,q,r) 
+}
+~~~
+ 
+
+
