--- a/算法导论读书笔记/算法导论第二章.md
+++ b/算法导论读书笔记/算法导论第二章.md
@@ -190,11 +190,11 @@ AR[r-q+1] = 无穷大
 i = 0 
 j = 0
 for(k = p to r)
-	if(a[i]<=a[j])
-		A[k] = a[i]
+	if(aL[i]<=aR[j])
+		A[k] = aL[i]
 		i = i+1
 	else
-		A[k] = a[j]
+		A[k] = aR[j]
 		j = j+1
 ~~~
 
@@ -210,6 +210,39 @@ void mergeSort(A,p,r)
 		MERGE(A,p,q,r) 
 }
 ~~~
- 
 
 
+
+### 练习题
+
+2.3.1略
+2.3.2
+	去掉哨兵，修改循环如下所示：
+~~~
+	for(k = p to r)
+		/新添加*******************************/
+		if(i>countL)
+			for(m = k to r)
+				A[m] = A[j]
+				j = j+1
+			return
+		if(j>countR)
+			for(m = k to r)
+				A[m] = A[i]
+				i = i+1
+			return
+		/*********************************新添加/
+        if(aL[i]<=aR[j])
+            A[k] = aL[i]
+            i = i+1
+        else
+            A[k] = aR[j]
+            j = j+1
+~~~
+2.3.3 
+证明：
+	1.当k=1时，n = $2^0$=2成立。
+	2.假设当k=k时,n=$2^k$,T(n)=n*$\log_2n$
+	3.当k=k+1时，n=$2^k+1$=n+1,T(n)=2*T(n)+2n=2n$\log_2n$+2n=(n+1)*$\log_2n+1$
+
+2.3.4
